# nviq

./: .gitignore  README.md  ginit.vim  init.lua  schema.json
after/ftplugin/: markdown.lua
doc/: nviq.txt
lua/: nviq.lua
lua/nviq/appl/: autopair.lua  bigfile.lua  emacs.lua  evaluate.lua  git.lua  glsl.lua  gui.lua  ime.lua  init.lua  jieba.lua  lsp.lua  markdown.lua  marp.lua  mdp.lua  offline.lua  optional.lua  packer.lua  rsmod.lua  run.lua  snippet.lua  stardict.lua  surround.lua  template.lua  terminal.lua  theme.lua  treesitter.lua  upgrade.lua  vscode.lua
lua/nviq/core/: commands.lua  defaults.lua  filetype.lua  init.lua  mappings.lua  settings.lua
lua/nviq/pack/: comp.lua  dap.lua  dev.lua  git.lua  init.lua  kits.lua  lsp.lua  mark.lua  treesitter.lua  ui.lua
lua/nviq/util/: autopair.lua  calc.lua  eval.lua  f.lua  k.lua  lib.lua  misc.lua  note.lua  p.lua  s.lua  surround.lua  syntax.lua  t.lua  template.lua
rust/_ffi_util/: Cargo.toml
rust/_stardict/: Cargo.toml
rust/_stardict/src/stardict/: library.rs
rust/nviq-ime/: Cargo.toml
rust/nviq-ime/src/: layout.rs  (+4 more)
rust/nviq-jieba/: Cargo.toml
rust/nviq-mdp/: .gitignore  Cargo.toml  build.rs
rust/nviq-mdp/src/: cmark.rs  code.rs  index.html  main.rs  nvim.rs  util.rs
rust/nviq-stardict/: Cargo.toml
rust/nviq-theme/: Cargo.toml
rust/nviq-upgrade/: Cargo.toml
snip/: package.json
snip/snippets/: cpp.json  python.json  tex.json
snippet/: tex.json
template/: templates.json
template/cpp/: cpp-cmakelists
tmpl/c/: c-src-exe
tmpl/cpp/: cpp-tests-cmakelists
viml/: basics.vim
(+27 files in other folders)
