[package]
name = "nviq-mdp"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.10"
actix-web = "4.13.0"
actix-ws = "0.4.0"
ammonia = "4.1.2"
anyhow = "1.0.102"
async-trait = "0.1.89"
futures = "0.3.32"
futures-util = "0.3.32"
mime_guess = "2.0.5"
nvim-rs = { version = "0.9.2", features = ["use_tokio"] }
pulldown-cmark = "0.13.3"
rmpv = "1.3.1"
rust-embed = { version = "8.11.0", features = ["compression"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
url = "2.5.8"
webbrowser = "1.2.0"

[build-dependencies]
reqwest = { version = "0.13.2", features = ["blocking"] }
zip = "8.4.0"
